--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                     <span>
                         <img class="" src="./images/reply.png" alt="reply"> 
                     </span>
-                    Share the link
+                    <p>Share the link</p>
                 </a>
                 <div class="day-text-block">
                     <div class="day-text">Monday</div>
@@ -29,13 +29,15 @@
                 <h4 class="shipping-text">Shipped from Mumbai</h4>
                 <div class="shipping-status">
                     <img class="" src="./images/info.png" alt="reply">   
-                    Status Of the package
+                    <p>Status Of the package <span>
+                        <img class="" src="./images/bottom_v.png" alt="reply">   
+                    </span></p>
                 </div>
             </div>
         </div>
         <div class="button-set">
-            <button>View Shipment Details</button>
-            <button>Take Actions</button>
+            <button type="button" class="view-shipment">View Shipment Details</button>
+            <button type="button" class="take-action">Take Actions</button>
         </div>
         <div class="reschedule-tab">
             <div class="reschedule-tab-image-left" >
@@ -94,13 +96,13 @@
             <div class="you-may-also-like-content">
                 <div class="you-may-also-like-image">
                     <img class="reschedule-tab-image-right" src="./images/image2.png" alt="reply">  
-                    <h4>Pepe Jeans</h4>
+                    <h4 class="product-title">Pepe Jeans</h4>
                     <p>Solid Slim Fit T-shirt</p>
                     <h5>Rs 5,845</h5>
                 </div>
                 <div class="you-may-also-like-image">
                      <img class="reschedule-tab-image-right" src="./images/image3.png" alt="reply">  
-                     <h4>Pepe Jeans</h4>
+                     <h4 class="product-title">Pepe Jeans</h4>
                      <p>Solid Slim Fit T-shirt</p>
                      <h5>Rs 5,845</h5>
                 </div>
