--- a/index.html
+++ b/index.html
@@ -8,105 +8,107 @@
 </head>
 
 <body>
-    <div class="section-body">
-        <div class="section-header">
-           <img class="header-image" src="./images/pepe.png" alt="pepe"> 
-        </div>
-        <div class="section-body-transit">
-            <div class="section-body-transit-content">
-                <h2 class="grey-heading">Your Order is in Transit</h2>
-                <h2 class="black-heading">Arriving On July</h2>
-                <a class="a-heading">
-                    <span>
-                        <img class="" src="./images/reply.png" alt="reply"> 
-                    </span>
-                    <p>Share the link</p>
-                </a>
-                <div class="day-text-block">
-                    <div class="day-text">Monday</div>
-                    <div class="date-text">05</div>
-                </div>
-                <h4 class="shipping-text">Shipped from Mumbai</h4>
-                <div class="shipping-status">
-                    <img class="" src="./images/info.png" alt="reply">   
-                    <p>Status Of the package <span>
-                        <img class="" src="./images/bottom_v.png" alt="reply">   
-                    </span></p>
+    <div class="container">
+        <div class="section-body">
+            <div class="section-header">
+            <img class="header-image" src="./images/pepe.png" alt="pepe"> 
+            </div>
+            <div class="section-body-transit">
+                <div class="section-body-transit-content">
+                    <h2 class="grey-heading">Your Order is in Transit</h2>
+                    <h2 class="black-heading">Arriving On July</h2>
+                    <a class="a-heading">
+                        <span>
+                            <img class="" src="./images/reply.png" alt="reply"> 
+                        </span>
+                        <p>Share the link</p>
+                    </a>
+                    <div class="day-text-block">
+                        <div class="day-text">Monday</div>
+                        <div class="date-text">05</div>
+                    </div>
+                    <h4 class="shipping-text">Shipped from Mumbai</h4>
+                    <div class="shipping-status">
+                        <img class="" src="./images/info.png" alt="reply">   
+                        <p>Status Of the package <span>
+                            <img class="" src="./images/bottom_v.png" alt="reply">   
+                        </span></p>
+                    </div>
                 </div>
             </div>
-        </div>
-        <div class="button-set">
-            <button type="button" class="view-shipment">View Shipment Details</button>
-            <button type="button" class="take-action">Take Actions</button>
-        </div>
-        <div class="reschedule-tab">
-            <div class="reschedule-tab-image-left" >
-            <img class="reschedule-image-left" src="./images/watch.png" alt="reply">   
-            Reschedule The Delivery
-        </div>
-        <div>
-            <img class="reschedule-tab-image-right" src="./images/side_v.png" alt="reply">  
-        </div> 
-        </div>  
-        </div>
-        <div class="reschedule-tab">
-            <div class="reschedule-tab-image-left" >
-            <img class="reschedule-image-left" src="./images/truck.png" alt="reply">   
-                Pickup from the last hub/Corrior
-        </div>
-        <div>
-            <img class="reschedule-tab-image-right" src="./images/side_v.png" alt="reply">  
-        </div> 
-        </div>
-        <div class="reschedule-tab">
-            <div class="reschedule-tab-image-left" >
-            <img class="reschedule-image-left" src="./images/notif.png" alt="reply">   
-                Get Delivery Updates
-        </div>
-        <div>
-            <img class="reschedule-tab-image-right" src="./images/side_v.png" alt="reply">  
-        </div> 
-        </div>
-        <div class="order-details">
-            <div class="order-details-heading">
-                <div><h3>Order Details</h3></div>
-                <div>
-                        <a><img class="" src="./images/reply.png" alt="reply">Share The Products</a>
+            <div class="button-set">
+                <button type="button" class="view-shipment">View Shipment Details</button>
+                <button type="button" class="take-action">Take Actions</button>
+            </div>
+            <div class="reschedule-tab">
+                <div class="reschedule-tab-image-left" >
+                <img class="reschedule-image-left" src="./images/watch.png" alt="reply">   
+                Reschedule The Delivery
+            </div>
+            <div>
+                <img class="reschedule-tab-image-right" src="./images/side_v.png" alt="reply">  
+            </div> 
+            </div>  
+            </div>
+            <div class="reschedule-tab">
+                <div class="reschedule-tab-image-left" >
+                <img class="reschedule-image-left" src="./images/truck.png" alt="reply">   
+                    Pickup from the last hub/Corrior
+            </div>
+            <div>
+                <img class="reschedule-tab-image-right" src="./images/side_v.png" alt="reply">  
+            </div> 
+            </div>
+            <div class="reschedule-tab">
+                <div class="reschedule-tab-image-left" >
+                <img class="reschedule-image-left" src="./images/notif.png" alt="reply">   
+                    Get Delivery Updates
+            </div>
+            <div>
+                <img class="reschedule-tab-image-right" src="./images/side_v.png" alt="reply">  
+            </div> 
+            </div>
+            <div class="order-details">
+                <div class="order-details-heading">
+                    <div><h3>Order Details</h3></div>
+                    <div>
+                        <a>
+                            <img class="" src="./images/reply.png" style="margin-right: 4px;" alt="reply">Share The Products
+                        </a>                        
+                    </div>
+                </div> 
+                <div class="order-details-content">
+                    <div class="order-details-content-left">
+                        <img class="order-details-content-left-image" src="./images/image 1.png" alt="reply">  
+                    </div>
+                    <div class="order-details-content-right">
+                        <h4>Pepe Jeans</h4>
+                        <p>Solid Slim Fit T-shirt</p>
+                        <p>Size: 30 | Qty: 1</p>
+                        <h5>Rs 5,845</h5>
+                    </div>
+                </div> 
+            </div>
 
-                    
-                </div>
-            </div> 
-            <div class="order-details-content">
-                <div class="order-details-content-left">
-                    <img class="order-details-content-left-image" src="./images/image 1.png" alt="reply">  
-                </div>
-                <div class="order-details-content-right">
-                    <h4>Pepe Jeans</h4>
-                    <p>Solid Slim Fit T-shirt</p>
-                    <p>Size: 30 | Qty: 1</p>
-                    <h5>Rs 5,845</h5>
-                </div>
-            </div> 
-        </div>
-
-        <div class="you-may-also-like">
-            <div class="you-may-also-like-heading">
-                <h3>You may also like</h3>
-            </div> 
-            <div class="you-may-also-like-content">
-                <div class="you-may-also-like-image">
-                    <img class="reschedule-tab-image-right" src="./images/image2.png" alt="reply">  
-                    <h4 class="product-title">Pepe Jeans</h4>
-                    <p>Solid Slim Fit T-shirt</p>
-                    <h5>Rs 5,845</h5>
-                </div>
-                <div class="you-may-also-like-image">
-                     <img class="reschedule-tab-image-right" src="./images/image3.png" alt="reply">  
-                     <h4 class="product-title">Pepe Jeans</h4>
-                     <p>Solid Slim Fit T-shirt</p>
-                     <h5>Rs 5,845</h5>
-                </div>
-            </div> 
+            <div class="you-may-also-like">
+                <div class="you-may-also-like-heading">
+                    <h3>You may also like</h3>
+                </div> 
+                <div class="you-may-also-like-content">
+                    <div class="you-may-also-like-image">
+                        <img class="reschedule-tab-image-right" src="./images/image2.png" alt="reply">  
+                        <h4 class="product-title">Pepe Jeans</h4>
+                        <p>Solid Slim Fit T-shirt</p>
+                        <h5>Rs 5,845</h5>
+                    </div>
+                    <div class="you-may-also-like-image">
+                        <img class="reschedule-tab-image-right" src="./images/image3.png" alt="reply">  
+                        <h4 class="product-title">Pepe Jeans</h4>
+                        <p>Solid Slim Fit T-shirt</p>
+                        <h5>Rs 5,845</h5>
+                    </div>
+                </div> 
+            </div>
         </div>
     </div>
 </body>
