--- a/index.html
+++ b/index.html
@@ -29,9 +29,9 @@
                     </div>
                     <h4 class="shipping-text">Shipped from Mumbai</h4>
                     <div class="shipping-status">
-                        <img class="" src="./images/info.png" alt="reply">   
+                        <img class="" src="./images/info.png" alt="info>   
                         <p>Status Of the package <span>
-                            <img class="" src="./images/bottom_v.png" alt="reply">   
+                            <img class="" src="./images/bottom_v.png" alt="arrow">   
                         </span></p>
                     </div>
                 </div>
@@ -42,30 +42,30 @@
             </div>
             <div class="reschedule-tab">
                 <div class="reschedule-tab-image-left" >
-                <img class="reschedule-image-left" src="./images/watch.png" alt="reply">   
+                <img class="reschedule-image-left" src="./images/watch.png" alt="watch">   
                 Reschedule The Delivery
             </div>
             <div>
-                <img class="reschedule-tab-image-right" src="./images/side_v.png" alt="reply">  
+                <img class="reschedule-tab-image-right" src="./images/side_v.png" alt="arrow">  
             </div> 
             </div>  
             </div>
             <div class="reschedule-tab">
                 <div class="reschedule-tab-image-left" >
-                <img class="reschedule-image-left" src="./images/truck.png" alt="reply">   
+                <img class="reschedule-image-left" src="./images/truck.png" alt="arrow">   
                     Pickup from the last hub/Corrior
             </div>
             <div>
-                <img class="reschedule-tab-image-right" src="./images/side_v.png" alt="reply">  
+                <img class="reschedule-tab-image-right" src="./images/side_v.png" alt="arrow">  
             </div> 
             </div>
             <div class="reschedule-tab">
                 <div class="reschedule-tab-image-left" >
-                <img class="reschedule-image-left" src="./images/notif.png" alt="reply">   
+                <img class="reschedule-image-left" src="./images/notif.png" alt="notification">   
                     Get Delivery Updates
             </div>
             <div>
-                <img class="reschedule-tab-image-right" src="./images/side_v.png" alt="reply">  
+                <img class="reschedule-tab-image-right" src="./images/side_v.png" alt="arrow">  
             </div> 
             </div>
             <div class="order-details">
@@ -79,7 +79,7 @@
                 </div> 
                 <div class="order-details-content">
                     <div class="order-details-content-left">
-                        <img class="order-details-content-left-image" src="./images/image 1.png" alt="reply">  
+                        <img class="order-details-content-left-image" src="./images/image 1.png" alt="pic">  
                     </div>
                     <div class="order-details-content-right">
                         <h4>Pepe Jeans</h4>
@@ -96,13 +96,13 @@
                 </div> 
                 <div class="you-may-also-like-content">
                     <div class="you-may-also-like-image">
-                        <img class="reschedule-tab-image-right" src="./images/image2.png" alt="reply">  
+                        <img class="reschedule-tab-image-right" src="./images/image2.png" alt="pic">  
                         <h4 class="product-title">Pepe Jeans</h4>
                         <p>Solid Slim Fit T-shirt</p>
                         <h5>Rs 5,845</h5>
                     </div>
                     <div class="you-may-also-like-image">
-                        <img class="reschedule-tab-image-right" src="./images/image3.png" alt="reply">  
+                        <img class="reschedule-tab-image-right" src="./images/image3.png" alt="pic">  
                         <h4 class="product-title">Pepe Jeans</h4>
                         <p>Solid Slim Fit T-shirt</p>
                         <h5>Rs 5,845</h5>
