fixed font weights

--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
                     </div>
                     <h4 class="shipping-text">Shipped from Mumbai</h4>
                     <div class="shipping-status">
-                        <img class="" src="./images/info.png" alt="info>   
-                        <p>Status Of the package <span>
+                        <img class="" src="./images/info.png" alt="info">   
+                        <p> Status Of the package <span>
                             <img class="" src="./images/bottom_v.png" alt="arrow">   
                         </span></p>
                     </div>
